# BasicCrossPlatformWindow

./: BasicCrossPlatformWindow.sln
BasicCrossPlatformWindow/: BasicCrossPlatformWindow.vcxproj  BasicCrossPlatformWindow.vcxproj.filters  CMakeLists.txt  main.c  platform.h  platform_linux.c  platform_win64.c  platform_win64.h
BasicCrossPlatformWindow/src/: main.c  platform.h
